Made a search bar but it kinda broke

--- a/app/src/main/res/layout/allcountry_item_layout.xml
+++ b/app/src/main/res/layout/allcountry_item_layout.xml
@@ -50,9 +50,9 @@
                             android:layout_height="wrap_content" android:id="@+id/population" android:textSize="18sp"/>
                 </LinearLayout>
 
-                <WebView android:layout_width="match_parent" android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:id="@+id/flag">
+                <WebView android:layout_width="match_parent" android:layout_height="75dp"
+                         android:layout_weight="3"
+                         android:id="@+id/flag" android:isScrollContainer="false">
                 </WebView>
             </LinearLayout>
         </LinearLayout>
