--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,21 @@
         tools:context=".MainActivity" android:id="@+id/coordinatorLayout">
 
 
-    <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+    <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="600dp"
             android:id="@+id/allCountriesView"
 
-            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/searchview"
             android:layout_marginBottom="9dp" app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
