--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchview"
+            android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
@@ -22,12 +22,14 @@
             android:layout_height="600dp"
             android:id="@+id/allCountriesView"
 
-            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/searchview"
+            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/searchView"
             android:layout_marginBottom="9dp" app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?android:attr/windowBackground"
+            app:menu="@menu/navigtaion"
             android:id="@+id/bottomNavigationView" android:layout_marginTop="9dp"
             app:layout_constraintTop_toBottomOf="@+id/allCountriesView" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
