--- a/app/src/main/res/menu/navigtaion.xml
+++ b/app/src/main/res/menu/navigtaion.xml
@@ -3,17 +3,17 @@
 
     <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/material_drawer_shadow_left"
-            android:title="home"></item>
-
-    <item
-            android:id="@+id/nav_search"
-            android:icon="@drawable/material_drawer_badge"
-            android:title="search"></item>
+            android:icon="@drawable/ic_action_home"
+            android:title="Home"></item>
 
     <item
             android:id="@+id/nav_favs"
-            android:icon="@drawable/material_drawer_shadow_right"
-            android:title="favorites"></item>
+            android:icon="@drawable/ic_action_favorite"
+            android:title="Favorites"></item>
+
+    <item
+            android:id="@+id/nav_game"
+            android:icon="@drawable/ic_action_game"
+            android:title="Country Game"></item>
 
 </menu>
