--- a/app/src/main/res/layout/allcountry_item_layout.xml
+++ b/app/src/main/res/layout/allcountry_item_layout.xml
@@ -2,13 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
+              android:layout_marginTop="4dp"
+              android:layout_marginBottom="4dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" app:contentPadding="0dp" app:cardCornerRadius="2dp"
-            app:cardElevation="4dp">
+            android:layout_height="match_parent"
+            xmlns:card_view="http://schemas.android.com/tools"
+            card_view:cardCornerRadius="10dp"
+            card_view:cardElevation="10dp"
+            app:contentPadding="10dp"
+            card_view:cardUseCompatPadding="true">
+
+             <!--app:cardCornerRadius="2dp"-->
+            <!--app:cardElevation="4dp"-->
+
+
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -24,12 +35,9 @@
                         android:text="TextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/name" android:layout_weight="3"
-                        android:textSize="24sp"/>
-                <TextView
-                        android:text="TextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/region" android:layout_weight="1"
-                        android:textSize="18sp"/>
+                        android:textSize="24sp" android:typeface="normal"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+
             </LinearLayout>
             <LinearLayout
                     android:orientation="horizontal"
@@ -42,18 +50,21 @@
                         android:layout_height="match_parent">
                     <TextView
                             android:text="TextView"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" android:id="@+id/capital" android:textSize="18sp"/>
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/region"
+                            android:textSize="18sp" android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                     <TextView
                             android:text="TextView"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" android:id="@+id/population" android:textSize="18sp"/>
+                            android:layout_height="wrap_content" android:id="@+id/capital" android:textSize="18sp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                    <TextView
+                            android:text="TextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" android:id="@+id/population" android:textSize="18sp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                 </LinearLayout>
 
-                <WebView android:layout_width="match_parent" android:layout_height="75dp"
-                         android:layout_weight="3"
-                         android:id="@+id/flag" android:isScrollContainer="false">
-                </WebView>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
