--- a/app/src/main/res/layout/activity_country.xml
+++ b/app/src/main/res/layout/activity_country.xml
@@ -22,13 +22,13 @@
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="395dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/countryNameTxt" app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
 
-    >
+            android:layout_marginStart="8dp" android:id="@+id/linearLayout">
         <androidx.cardview.widget.CardView
                 android:paddingVertical="8dp"
                 android:layout_width="match_parent"
@@ -68,6 +68,14 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="141dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="142dp"
+            android:layout_marginBottom="50dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            android:layout_marginTop="34dp" app:layout_constraintTop_toBottomOf="@+id/countryNameTxt"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
