--- a/app/src/main/res/menu/navigtaion.xml
+++ b/app/src/main/res/menu/navigtaion.xml
@@ -12,8 +12,8 @@
             android:title="Favorites"></item>
 
     <item
-            android:id="@+id/nav_game"
-            android:icon="@drawable/ic_action_game"
-            android:title="Country Game"></item>
+            android:id="@+id/nav_map"
+            android:icon="@drawable/ic_action_map"
+            android:title="Maps"></item>
 
 </menu>
